...
            "state": "translated",
            "value": "Até %lld km"
          }
        }
      }
    },
    "Avaliar turno": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Avaliar turno"
          }
...
            "state": "translated",
            "value": "Coordenadas inválidas."
          }
        }
      }
    },
    "Código de acesso": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Código de acesso"
          }
...
            "state": "translated",
            "value": "Material próprio: %@"
          }
        }
      }
    },
    "Meu turno": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Meu turno"
          }
        }
      }
    },
    "Meus turnos": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Meus turnos"
          }
...
            "state": "translated",
            "value": "Presença"
          }
        }
      }
    },
    "Publicar vaga": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Publicar vaga"
          }
...
            "state": "translated",
            "value": "Vagas"
          }
        }
      }
    },
    "Vagas no DF": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Vagas no DF"
          }
...
